--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -118,69 +118,69 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CreateNewAccount" xml:space="preserve">
-    <value>Create new account</value>
+    <value>Ласкаво просимо!</value>
   </data>
   <data name="EmailAuth" xml:space="preserve">
-    <value>Email</value>
+    <value>Пошта</value>
   </data>
   <data name="EmailRequest" xml:space="preserve">
-    <value>Enter Email</value>
+    <value>Введіть Email</value>
   </data>
   <data name="EnterValidEmail" xml:space="preserve">
-    <value>Enter valid Email</value>
+    <value>Введіть правильний Email</value>
   </data>
   <data name="FillAllFields" xml:space="preserve">
-    <value>Please fill all folowing fields</value>
+    <value>Будь ласка заповніть усі наступні поля</value>
   </data>
   <data name="Greetings" xml:space="preserve">
-    <value>Welcome!</value>
+    <value>Ласкаво просимо!</value>
   </data>
   <data name="IncorrectPassword" xml:space="preserve">
-    <value>Incorrect password</value>
+    <value>Неправильний пароль</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Login</value>
+    <value>Логін</value>
   </data>
   <data name="LoginRequest" xml:space="preserve">
-    <value>Please Log into your account</value>
+    <value>Будь ласка ввійдіть у Ваш акаунт</value>
   </data>
   <data name="Log_In" xml:space="preserve">
-    <value>Log In</value>
+    <value>Увійти</value>
   </data>
   <data name="Password" xml:space="preserve">
-    <value>Password</value>
+    <value>Пароль</value>
   </data>
   <data name="PasswordRequest" xml:space="preserve">
-    <value>Enter password</value>
+    <value>Введіть пароль</value>
   </data>
   <data name="PswdNormal" xml:space="preserve">
-    <value>Password normal</value>
+    <value>Пароль нормальний</value>
   </data>
   <data name="PswdStrong" xml:space="preserve">
-    <value>Password strong</value>
+    <value>Пароль надійний</value>
   </data>
   <data name="PswdVeryStrong" xml:space="preserve">
-    <value>Password very strong</value>
+    <value>Пароль дуже надійний</value>
   </data>
   <data name="PswdVeryWeak" xml:space="preserve">
-    <value>Password very weak</value>
+    <value>Пароль дуже слабкий</value>
   </data>
   <data name="PswdWeak" xml:space="preserve">
-    <value>Password weak</value>
+    <value>Пароль слабкий</value>
   </data>
   <data name="RememberMe" xml:space="preserve">
-    <value>Remember me</value>
+    <value>Запам'ятати мене</value>
   </data>
   <data name="ResetPassword" xml:space="preserve">
-    <value>Reset password</value>
+    <value>Скинути пароль</value>
   </data>
   <data name="SignUp" xml:space="preserve">
-    <value>Sign Up</value>
+    <value>Зареєструватися</value>
   </data>
   <data name="UserExists" xml:space="preserve">
-    <value>User already exists</value>
+    <value>Користувач уже існує</value>
   </data>
   <data name="UserNotExists" xml:space="preserve">
-    <value>User does not exists</value>
+    <value>Користувач не знайдений</value>
   </data>
 </root>
