--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CreateNewAccount" xml:space="preserve">
-    <value>Ласкаво просимо!</value>
+    <value>Створити новий акаунт</value>
   </data>
   <data name="EmailAuth" xml:space="preserve">
     <value>Пошта</value>
