--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -123,6 +123,15 @@
   <data name="EmailAuth" xml:space="preserve">
     <value>Пошта</value>
   </data>
+  <data name="EmailConfirmationConfirm" xml:space="preserve">
+    <value>Підтвердити</value>
+  </data>
+  <data name="EmailConfirmationHint" xml:space="preserve">
+    <value>Введіть код, який ви отримали поштою</value>
+  </data>
+  <data name="EmailConfirmationTitle" xml:space="preserve">
+    <value>Підтвердіть пошту</value>
+  </data>
   <data name="EmailRequest" xml:space="preserve">
     <value>Введіть Email</value>
   </data>
