--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -162,6 +162,15 @@
   <data name="PasswordRequest" xml:space="preserve">
     <value>Введіть пароль</value>
   </data>
+  <data name="PasswordResetConfirm" xml:space="preserve">
+    <value>Підтвердити</value>
+  </data>
+  <data name="PasswordResetHint" xml:space="preserve">
+    <value>Заповніть наступні поля</value>
+  </data>
+  <data name="PasswordResetTitle" xml:space="preserve">
+    <value>Скидання пароля</value>
+  </data>
   <data name="PswdNormal" xml:space="preserve">
     <value>Пароль нормальний</value>
   </data>
