--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -127,7 +127,7 @@
     <value>Confirm</value>
   </data>
   <data name="EmailConfirmationHint" xml:space="preserve">
-    <value>Enter 8-digit code that tou've received by email</value>
+    <value>Enter 6-digit code that tou've received by email</value>
   </data>
   <data name="EmailConfirmationTitle" xml:space="preserve">
     <value>Confirm your email</value>
@@ -161,6 +161,15 @@
   </data>
   <data name="PasswordRequest" xml:space="preserve">
     <value>Enter password</value>
+  </data>
+  <data name="PasswordResetConfirm" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="PasswordResetHint" xml:space="preserve">
+    <value>Fill all bottom fields</value>
+  </data>
+  <data name="PasswordResetTitle" xml:space="preserve">
+    <value>Password reset</value>
   </data>
   <data name="PswdNormal" xml:space="preserve">
     <value>Password normal</value>
