--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -162,11 +162,23 @@
   <data name="PasswordRequest" xml:space="preserve">
     <value>Введите пароль</value>
   </data>
+  <data name="PasswordResetBack" xml:space="preserve">
+    <value>Назад</value>
+  </data>
+  <data name="PasswordResetCode" xml:space="preserve">
+    <value>Код подтвердждения</value>
+  </data>
   <data name="PasswordResetConfirm" xml:space="preserve">
     <value>Подтвердить</value>
   </data>
+  <data name="PasswordResetEmail" xml:space="preserve">
+    <value>Почта</value>
+  </data>
   <data name="PasswordResetHint" xml:space="preserve">
     <value>Заполните следующие поля</value>
+  </data>
+  <data name="PasswordResetNewPassword" xml:space="preserve">
+    <value>Новый пароль</value>
   </data>
   <data name="PasswordResetTitle" xml:space="preserve">
     <value>Сброс пароля</value>
