--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -162,11 +162,23 @@
   <data name="PasswordRequest" xml:space="preserve">
     <value>Введіть пароль</value>
   </data>
+  <data name="PasswordResetBack" xml:space="preserve">
+    <value>Назад</value>
+  </data>
+  <data name="PasswordResetCode" xml:space="preserve">
+    <value>Код підтвердженя</value>
+  </data>
   <data name="PasswordResetConfirm" xml:space="preserve">
     <value>Підтвердити</value>
   </data>
+  <data name="PasswordResetEmail" xml:space="preserve">
+    <value>Пошта</value>
+  </data>
   <data name="PasswordResetHint" xml:space="preserve">
     <value>Заповніть наступні поля</value>
+  </data>
+  <data name="PasswordResetNewPassword" xml:space="preserve">
+    <value>Новий пароль</value>
   </data>
   <data name="PasswordResetTitle" xml:space="preserve">
     <value>Скидання пароля</value>
