Reset password page layout and logic update

--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -180,6 +180,9 @@
   <data name="PasswordResetNewPassword" xml:space="preserve">
     <value>Новый пароль</value>
   </data>
+  <data name="PasswordResetSendCode" xml:space="preserve">
+    <value>Отправить код</value>
+  </data>
   <data name="PasswordResetTitle" xml:space="preserve">
     <value>Сброс пароля</value>
   </data>
