--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -180,6 +180,9 @@
   <data name="PasswordResetNewPassword" xml:space="preserve">
     <value>New password</value>
   </data>
+  <data name="PasswordResetSendCode" xml:space="preserve">
+    <value>Send code</value>
+  </data>
   <data name="PasswordResetTitle" xml:space="preserve">
     <value>Password reset</value>
   </data>
