Add full email confirmation

--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -186,6 +186,9 @@
   <data name="PasswordResetTitle" xml:space="preserve">
     <value>Password reset</value>
   </data>
+  <data name="PasswordResetWrongCode" xml:space="preserve">
+    <value>Invalid code entered</value>
+  </data>
   <data name="PswdNormal" xml:space="preserve">
     <value>Password normal</value>
   </data>
