--- a/PasswordManagerWindow/Properties/Resources.resx
+++ b/PasswordManagerWindow/Properties/Resources.resx
@@ -117,6 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddFormHeader" xml:space="preserve">
+    <value>Add a record</value>
+  </data>
+  <data name="EditFormHeader" xml:space="preserve">
+    <value>Edit a record</value>
+  </data>
+  <data name="FormCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="FormLogin" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="FormPassword" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="FormRecource" xml:space="preserve">
+    <value>Recource</value>
+  </data>
+  <data name="FormSecondaryHeader" xml:space="preserve">
+    <value>Please fiil all following fields</value>
+  </data>
+  <data name="FormSubmit" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="FormSuggestPassword" xml:space="preserve">
+    <value>Use suggested password</value>
+  </data>
   <data name="PlaceholderSearch" xml:space="preserve">
     <value>Search for passwords</value>
   </data>
