--- a/PasswordManagerWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerWindow/Properties/Resources.ru-RU.resx
@@ -117,6 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddFormHeader" xml:space="preserve">
+    <value>Добавить запись</value>
+  </data>
+  <data name="EditFormHeader" xml:space="preserve">
+    <value>Редактировать запись</value>
+  </data>
+  <data name="FormCancel" xml:space="preserve">
+    <value>Отменить</value>
+  </data>
+  <data name="FormLogin" xml:space="preserve">
+    <value>Логин</value>
+  </data>
+  <data name="FormPassword" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="FormRecource" xml:space="preserve">
+    <value>Ресурс</value>
+  </data>
+  <data name="FormSecondaryHeader" xml:space="preserve">
+    <value>Заполните следующие поля</value>
+  </data>
+  <data name="FormSubmit" xml:space="preserve">
+    <value>Подтвердить</value>
+  </data>
+  <data name="FormSuggestPassword" xml:space="preserve">
+    <value>Использовать предложеный пароль</value>
+  </data>
   <data name="PlaceholderSearch" xml:space="preserve">
     <value>Поиск паролей</value>
   </data>
