--- a/PasswordManagerWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerWindow/Properties/Resources.ru-RU.resx
@@ -135,6 +135,9 @@
   <data name="FormCancel" xml:space="preserve">
     <value>Отменить</value>
   </data>
+  <data name="FormFillAllFields" xml:space="preserve">
+    <value>Поля не могут быть пустыми</value>
+  </data>
   <data name="FormLogin" xml:space="preserve">
     <value>Логин</value>
   </data>
@@ -175,7 +178,7 @@
     <value>Запись была удалена</value>
   </data>
   <data name="TapToCopyToolTip" xml:space="preserve">
-    <value>Нажмите чтобы скопировать</value>
+    <value>Двойной клик чтобы скопировать</value>
   </data>
   <data name="TextCopiedToClipboardNotification" xml:space="preserve">
     <value>Скопировано в буфер обмена</value>
