--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -279,6 +279,18 @@
   <data name="TextCopiedToClipboardNotification" xml:space="preserve">
     <value>Copied to clipboard</value>
   </data>
+  <data name="TwoStepAuthenticationCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="TwoStepAuthenticationHint" xml:space="preserve">
+    <value>Enter 6-digit code that tou've received by email</value>
+  </data>
+  <data name="TwoStepAuthenticationSubmit" xml:space="preserve">
+    <value>Submit</value>
+  </data>
+  <data name="TwoStepAuthenticationTitle" xml:space="preserve">
+    <value>Two step authentication</value>
+  </data>
   <data name="UserExists" xml:space="preserve">
     <value>User already exists</value>
   </data>
