--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -279,6 +279,18 @@
   <data name="TextCopiedToClipboardNotification" xml:space="preserve">
     <value>Скопійовано в буфер обміну</value>
   </data>
+  <data name="TwoStepAuthenticationCancel" xml:space="preserve">
+    <value>Скасувати</value>
+  </data>
+  <data name="TwoStepAuthenticationHint" xml:space="preserve">
+    <value>Введіть код, який ви отримали поштою</value>
+  </data>
+  <data name="TwoStepAuthenticationSubmit" xml:space="preserve">
+    <value>Підтвердити</value>
+  </data>
+  <data name="TwoStepAuthenticationTitle" xml:space="preserve">
+    <value>Двохфакторна аунтефікація</value>
+  </data>
   <data name="UserExists" xml:space="preserve">
     <value>Користувач уже існує</value>
   </data>
