--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -297,6 +297,21 @@
   <data name="TextCopiedToClipboardNotification" xml:space="preserve">
     <value>Copied to clipboard</value>
   </data>
+  <data name="ThemeSettingDark" xml:space="preserve">
+    <value>Dark</value>
+  </data>
+  <data name="ThemeSettingHeader" xml:space="preserve">
+    <value>App theme</value>
+  </data>
+  <data name="ThemeSettingLight" xml:space="preserve">
+    <value>Light</value>
+  </data>
+  <data name="ThemeSettingSystem" xml:space="preserve">
+    <value>System</value>
+  </data>
+  <data name="TraySettingHeader" xml:space="preserve">
+    <value>Minimize app to tray</value>
+  </data>
   <data name="TwoStepAuthenticationCancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
