--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -297,6 +297,21 @@
   <data name="TextCopiedToClipboardNotification" xml:space="preserve">
     <value>Скопировано в буфер обмена</value>
   </data>
+  <data name="ThemeSettingDark" xml:space="preserve">
+    <value>Тёмная</value>
+  </data>
+  <data name="ThemeSettingHeader" xml:space="preserve">
+    <value>Тема програмы</value>
+  </data>
+  <data name="ThemeSettingLight" xml:space="preserve">
+    <value>Светлая</value>
+  </data>
+  <data name="ThemeSettingSystem" xml:space="preserve">
+    <value>Системная</value>
+  </data>
+  <data name="TraySettingHeader" xml:space="preserve">
+    <value>Свертывать в трей</value>
+  </data>
   <data name="TwoStepAuthenticationCancel" xml:space="preserve">
     <value>Отмена</value>
   </data>
