--- a/PasswordManagerMainWindow/Properties/Resources.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.resx
@@ -132,6 +132,9 @@
   <data name="DataGridResource" xml:space="preserve">
     <value>Resource</value>
   </data>
+  <data name="DeleteRecordFormHeader" xml:space="preserve">
+    <value>Are you sure wou want to delete this record?</value>
+  </data>
   <data name="EditFormHeader" xml:space="preserve">
     <value>Edit a record</value>
   </data>
